<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--广告位-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_120"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/home_news_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:id="@+id/home_news_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/size_20"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/home_news_iv_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_3"
                android:background="@drawable/guide_on"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/home_news_iv_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_3"
                android:background="@drawable/guide_off" />

            <ImageView
                android:id="@+id/home_news_iv_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_3"
                android:background="@drawable/guide_off" />
        </LinearLayout>

    </RelativeLayout>

    <!--内容区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/home_center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuijianchanping"
        android:padding="@dimen/size_8"
        />
     <LinearLayout
         android:id="@+id/home_project_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/size_30"
         android:background="#CCCCCC"
         >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             >
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/simu"
                  />
             </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/zichanguanli"
                 />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/xintuo"
                 />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/jijin"
                 />
         </RelativeLayout>
      </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:background="#6F6F6F"
            ></View>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/size_30"
           android:background="#CCCCCC"
           >
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:text="@string/xiangmumingchen"
                   />
           </RelativeLayout>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:text="@string/shouyilv"
                   />
           </RelativeLayout>

         </LinearLayout>
    </LinearLayout>

</LinearLayout>