<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <!--title bar-->
    <RelativeLayout
        android:id="@+id/main_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45"
        android:background="@color/main_bar_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_15"
            android:src="@drawable/topbar_selector" />

        <TextView
            android:id="@+id/main_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shouye"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_15"
            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
    </RelativeLayout>

    <!--抽屉菜单-->
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/main_drawer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--内容展示区-->
        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>


        <LinearLayout
            android:layout_width="@dimen/size_200"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#888888"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:background="#4D4D4D"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/shouye" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:background="#4D4D4D"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/jinrongxiangmu" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:background="#4D4D4D"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/touziguwen" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:background="#4D4D4D"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/xinxizixun" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:background="#4D4D4D"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gainiantiyan" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:background="#4D4D4D"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/me" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>